--- a/astro-loree/src/styles/global.css
+++ b/astro-loree/src/styles/global.css
@@ -38,6 +38,13 @@ body {
     background-color: white;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    position: absolute;
+    display: block;
+    height: 80vh;
+    left: 0px;
+    top: 0.0909091px;
+    width: auto;
+    z-index: 1;
 }
 
 .page-content {
