--- a/astro-loree/src/styles/global.css
+++ b/astro-loree/src/styles/global.css
@@ -34,7 +34,7 @@ body {
 }
 
 /* Page Flip Styles */
-.page {
+#book>div>div>div.page.stf__item.--hard.--left.--simple {
     background-color: white;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
