--- a/astro-loree/src/components/Book.astro
+++ b/astro-loree/src/components/Book.astro
@@ -45,7 +45,7 @@
         align-items: center;
         width: 100vw;
         height: 100vh;
-        background-color: #f5f5f5; /* Background behind the book */
+        background-color: var(--light-bg); /* Use the new background color */
         overflow: hidden;
     }
 
