--- a/astro-loree/src/components/Contact.astro
+++ b/astro-loree/src/components/Contact.astro
@@ -32,12 +32,7 @@ const details = contactModel.getDetails();
                     </div>
                 </div>
             </div>
-            <form class="contact-form">
-                <input type="text" placeholder="Votre nom" required>
-                <input type="email" placeholder="Votre email" required>
-                <textarea placeholder="Votre message" rows="5" required></textarea>
-                <button type="submit" class="cta-button">Envoyer</button>
-            </form>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd823Q0D61pF8nzfHhUkrYaM4_OgPIVPaGzHEpeWyrLQY1ing/viewform?embedded=true" width="640" height="2376" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
         </div>
     </div>
 </section>
