--- a/astro-loree/src/styles/global.css
+++ b/astro-loree/src/styles/global.css
@@ -112,6 +112,7 @@ body {
     height: 100%;
     object-fit: cover;
     object-position: center;
+    border-radius: 4px 0px 0px 4px;
 }
 
 .hero-overlay {
