--- a/astro-loree/src/styles/global.css
+++ b/astro-loree/src/styles/global.css
@@ -45,21 +45,39 @@ body {
     border-right: 1px solid rgba(0, 0, 0, 0.05);
 }
 
+.page.cover {
+    background-color: #F0EFEB;
+    background-image: repeating-linear-gradient(45deg, transparent 5px, rgba(121, 182, 216, 0.5) 5px, rgba(121, 182, 216, 0.5) 10px,
+            rgba(199, 228, 202, 0) 10px, rgba(199, 228, 202, 0) 35px, rgba(199, 228, 202, 0.5) 35px, rgba(199, 228, 202, 0.5) 40px,
+            rgba(121, 182, 216, 0.5) 40px, rgba(121, 182, 216, 0.5) 50px, rgba(121, 182, 216, 0) 50px, rgba(121, 182, 216, 0) 60px,
+            rgba(199, 228, 202, 0.5) 60px, rgba(199, 228, 202, 0.5) 70px, rgba(245, 235, 200, 0.5) 70px, rgba(245, 235, 200, 0.5) 80px,
+            rgba(245, 235, 200, 0) 80px, rgba(245, 235, 200, 0) 90px, rgba(199, 228, 202, 0.5) 90px, rgba(199, 228, 202, 0.5) 110px,
+            rgba(199, 228, 202, 0) 110px, rgba(199, 228, 202, 0) 120px, rgba(121, 182, 216, 0.5) 120px, rgba(121, 182, 216, 0.5) 140px),
+        repeating-linear-gradient(135deg, transparent 5px, rgba(121, 182, 216, 0.5) 5px, rgba(121, 182, 216, 0.5) 10px,
+            rgba(199, 228, 202, 0) 10px, rgba(199, 228, 202, 0) 35px, rgba(199, 228, 202, 0.5) 35px, rgba(199, 228, 202, 0.5) 40px,
+            rgba(121, 182, 216, 0.5) 40px, rgba(121, 182, 216, 0.5) 50px, rgba(121, 182, 216, 0) 50px, rgba(121, 182, 216, 0) 60px,
+            rgba(199, 228, 202, 0.5) 60px, rgba(199, 228, 202, 0.5) 70px, rgba(245, 235, 200, 0.5) 70px, rgba(245, 235, 200, 0.5) 80px,
+            rgba(245, 235, 200, 0) 80px, rgba(245, 235, 200, 0) 90px, rgba(199, 228, 202, 0.5) 90px, rgba(199, 228, 202, 0.5) 110px,
+            rgba(199, 228, 202, 0) 110px, rgba(199, 228, 202, 0) 140px, rgba(121, 182, 216, 0.5) 140px, rgba(121, 182, 216, 0.5) 160px);
+    box-shadow: 10px 0 20px rgba(0, 0, 0, 0.3), inset -5px 0 10px rgba(0, 0, 0, 0.2);
+    border-right: none;
+    color: var(--text-dark);
+}
 
 .page.back-cover {
-    background-color: hsl(34, 53%, 82%);
-    background-image: repeating-linear-gradient(45deg, transparent 5px, hsla(197, 62%, 11%, 0.5) 5px, hsla(197, 62%, 11%, 0.5) 10px,
-            hsla(5, 53%, 63%, 0) 10px, hsla(5, 53%, 63%, 0) 35px, hsla(5, 53%, 63%, 0.5) 35px, hsla(5, 53%, 63%, 0.5) 40px,
-            hsla(197, 62%, 11%, 0.5) 40px, hsla(197, 62%, 11%, 0.5) 50px, hsla(197, 62%, 11%, 0) 50px, hsla(197, 62%, 11%, 0) 60px,
-            hsla(5, 53%, 63%, 0.5) 60px, hsla(5, 53%, 63%, 0.5) 70px, hsla(35, 91%, 65%, 0.5) 70px, hsla(35, 91%, 65%, 0.5) 80px,
-            hsla(35, 91%, 65%, 0) 80px, hsla(35, 91%, 65%, 0) 90px, hsla(5, 53%, 63%, 0.5) 90px, hsla(5, 53%, 63%, 0.5) 110px,
-            hsla(5, 53%, 63%, 0) 110px, hsla(5, 53%, 63%, 0) 120px, hsla(197, 62%, 11%, 0.5) 120px, hsla(197, 62%, 11%, 0.5) 140px),
-        repeating-linear-gradient(135deg, transparent 5px, hsla(197, 62%, 11%, 0.5) 5px, hsla(197, 62%, 11%, 0.5) 10px,
-            hsla(5, 53%, 63%, 0) 10px, hsla(5, 53%, 63%, 0) 35px, hsla(5, 53%, 63%, 0.5) 35px, hsla(5, 53%, 63%, 0.5) 40px,
-            hsla(197, 62%, 11%, 0.5) 40px, hsla(197, 62%, 11%, 0.5) 50px, hsla(197, 62%, 11%, 0) 50px, hsla(197, 62%, 11%, 0) 60px,
-            hsla(5, 53%, 63%, 0.5) 60px, hsla(5, 53%, 63%, 0.5) 70px, hsla(35, 91%, 65%, 0.5) 70px, hsla(35, 91%, 65%, 0.5) 80px,
-            hsla(35, 91%, 65%, 0) 80px, hsla(35, 91%, 65%, 0) 90px, hsla(5, 53%, 63%, 0.5) 90px, hsla(5, 53%, 63%, 0.5) 110px,
-            hsla(5, 53%, 63%, 0) 110px, hsla(5, 53%, 63%, 0) 140px, hsla(197, 62%, 11%, 0.5) 140px, hsla(197, 62%, 11%, 0.5) 160px);
+    background-color: #F0EFEB;
+    background-image: repeating-linear-gradient(45deg, transparent 5px, rgba(121, 182, 216, 0.5) 5px, rgba(121, 182, 216, 0.5) 10px,
+            rgba(199, 228, 202, 0) 10px, rgba(199, 228, 202, 0) 35px, rgba(199, 228, 202, 0.5) 35px, rgba(199, 228, 202, 0.5) 40px,
+            rgba(121, 182, 216, 0.5) 40px, rgba(121, 182, 216, 0.5) 50px, rgba(121, 182, 216, 0) 50px, rgba(121, 182, 216, 0) 60px,
+            rgba(199, 228, 202, 0.5) 60px, rgba(199, 228, 202, 0.5) 70px, rgba(245, 235, 200, 0.5) 70px, rgba(245, 235, 200, 0.5) 80px,
+            rgba(245, 235, 200, 0) 80px, rgba(245, 235, 200, 0) 90px, rgba(199, 228, 202, 0.5) 90px, rgba(199, 228, 202, 0.5) 110px,
+            rgba(199, 228, 202, 0) 110px, rgba(199, 228, 202, 0) 120px, rgba(121, 182, 216, 0.5) 120px, rgba(121, 182, 216, 0.5) 140px),
+        repeating-linear-gradient(135deg, transparent 5px, rgba(121, 182, 216, 0.5) 5px, rgba(121, 182, 216, 0.5) 10px,
+            rgba(199, 228, 202, 0) 10px, rgba(199, 228, 202, 0) 35px, rgba(199, 228, 202, 0.5) 35px, rgba(199, 228, 202, 0.5) 40px,
+            rgba(121, 182, 216, 0.5) 40px, rgba(121, 182, 216, 0.5) 50px, rgba(121, 182, 216, 0) 50px, rgba(121, 182, 216, 0) 60px,
+            rgba(199, 228, 202, 0.5) 60px, rgba(199, 228, 202, 0.5) 70px, rgba(245, 235, 200, 0.5) 70px, rgba(245, 235, 200, 0.5) 80px,
+            rgba(245, 235, 200, 0) 80px, rgba(245, 235, 200, 0) 90px, rgba(199, 228, 202, 0.5) 90px, rgba(199, 228, 202, 0.5) 110px,
+            rgba(199, 228, 202, 0) 110px, rgba(199, 228, 202, 0) 140px, rgba(121, 182, 216, 0.5) 140px, rgba(121, 182, 216, 0.5) 160px);
     box-shadow: -10px 0 20px rgba(0, 0, 0, 0.3), inset 5px 0 10px rgba(0, 0, 0, 0.2);
     border-left: none;
     color: var(--text-dark);
